<?xml version="1.0"?>
<package format="3">
  <name>champ_nav2_controller</name>
  <version>0.0.1</version>
  <description>
    Custom Nav2 controller plugin for CHAMP: pure-pursuit path following with
    a rotate-to-heading gate and live command-vs-odom velocity calibration,
    purpose-built for a legged gait that doesn't track commanded velocity
    the way a wheeled robot does.
  </description>

  <maintainer email="biswajeetpanda101@gmail.com">biswajeet</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>pluginlib</depend>
  <depend>nav2_core</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>nav2_util</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
